# xylok-view

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  flatpak_builder.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
assets/: io.github.joshuardecker.stig-view.desktop  io.github.joshuardecker.xylok-view.desktop
core/: Cargo.toml
core/src/: detection.rs
desktop/: Cargo.toml  build.rs
desktop/src/app/: app.rs  mod.rs  search.rs
desktop/src/ui/: assets.rs  mod.rs
desktop/src/widgets/: markdown.rs  mod.rs  selectable_text.rs  text_utils.rs
desktop/wix/: main.wxs
scripts/: linux.sh  macos.sh  windows.sh
src/: main.rs
src/app/: app.rs  latest_release.rs  migrate.rs  mod.rs  search.rs  settings.rs  time_opened.rs
src/parse/: ckl.rs  detection.rs  mod.rs  xccdf.rs  xylok.rs
src/ui/: assets.rs  mod.rs  styles.rs  themes.rs
src/widgets/: mod.rs
wix/: License.rtf  main.wxs
