[package]
name = "stig-view-core"
version = "0.6.1"
edition = "2024"

[lib]
name = "stig_view_core"
path = "src/lib.rs"

[dependencies]
roxmltree = "0.21"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
regex = "1.12.2"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
zstd = "0.13.3"
toml = "1.0.6"
dirs = "6"
serde_json = "1.0.149"
